assets/css/output.css
/**
 * Copyright (c) 2013-2016, Erin Morelli.
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 *
 *
 * EM Beer Manager output styles
 */

.embm-beer {
    margin: 25px 0 30px;
}
.embm-beer .embm-beer--header {
    border-bottom: 1px solid #ccc;
    display: block;
    margin-bottom: 20px;
    padding-bottom: 3px;
}
.embm-beer--header > a,
.embm-beer .embm-beer--header > a {
    border: 0;
    text-decoration: none;
}
.embm-beer--header > a > .embm-beer--header-title,
.embm-beer--header > .embm-beer--header-title,
.embm-beer .embm-beer--header > .embm-beer--header-title,
.embm-beer .embm-beer--header > a > .embm-beer--header-title {
    border: 0;
    display: inline-block;
    margin: 0;
    text-decoration: none;
}
.embm-beer .embm-beer--header-style {
    display: inline-block;
    font-size: 60%;
    font-style: italic;
    padding-left: 10px;
}
.embm-beer .embm-beer--header-style > a {
    border: 0;
    color: #888;
    text-decoration: none;
}
.embm-beer .embm-beer--image > .wp-post-image {
    display: block;
    float: left;
    margin: 0 20px 10px 0;
    width: 150px;
}
.embm-beer .embm-beer--image > img {
    height: auto;
    width: 150px;
}
.embm-beer .embm-beer--rating {
    font-size: 80%;
    line-height: 20px;
    padding: 0 0 20px 0;
}
.embm-beer .embm-beer--rating p {
    display: none;
    visibility: hidden;
}
.embm-beer .embm-beer--rating-stars {
    padding-right: 5px;
}
.embm-beer .embm-beer--rating-stars > svg  {
    display: block;
    float: left;
    height: 20px;
}
.embm-beer .embm-beer--rating-stars polygon {
    stroke-width: 15px;
}
.embm-beer .embm-beer--description {
    padding: 0 0 0 20px;
}
.embm-beer .embm-beer--description p {
    margin-bottom: 20px;
    padding-bottom: 0;
}
.embm-beer .embm-beer--description > .embm-beer--untappd {
    padding: 0 0 20px;
}
.embm-beer .embm-beer--description > .embm-beer--untappd > a {
    border-width: 0;
    box-shadow: none;
    display: inline-block;
    text-decoration: none;
}
.embm-beer .embm-beer--meta {
    background: #eee;
    border: 1px solid #ddd;
    clear: both;
    color: #000;
    display: block;
    padding: 15px 20px;
    margin-bottom: 35px;
}
.embm-beer .embm-beer--meta > .embm-beer--meta-profile {
    padding-bottom: 10px;
}
.embm-beer .embm-beer--meta > .embm-beer--meta-extras .label,
.embm-beer .embm-beer--meta > .embm-beer--meta-profile .label {
    display: inline-block;
    font-weight: bold;
    padding-right: 8px;
}
.embm-beer .embm-beer--meta > .embm-beer--meta-profile > .abv,
.embm-beer .embm-beer--meta > .embm-beer--meta-profile > .ibu {
    display: inline-block;
    padding: 0 20px 5px 0;
}
.embm-beer .embm-beer--meta > .embm-beer--meta-extras > .notes > .label {
    display: block;
    font-weight: bold;
    padding: 10px 0 3px;
}
.embm-beer .embm-beer--review:not(:last-of-type) {
    margin-bottom: 25px;
}
.embm-beer .embm-beer--review::after {
    clear: both;
    content: " ";
    display: block;
    font-size: 0;
    height: 0;
    visibility: hidden;
}
.embm-beer .embm-beer--review a {
    border: 0;
    box-shadow: none;
    text-decoration: none;
}
.embm-beer .embm-beer--review > div {
    display: block;
    float: left;
}
.embm-beer .embm-beer--review .embm-beer--review-thumb {
    -moz-border-radius: 26px;
    -webkit-border-radius: 26px;
    border-radius: 26px;
    height: 52px;
    margin-right: 15px;
    overflow: hidden;
    width: 52px;
}
.embm-beer .embm-beer--review .embm-beer--review-thumb > img {
    height: 100%;
    width: 100%;
}
.embm-beer .embm-beer--review .embm-beer--review-author {
    font-size: 100%;
    margin: 0 0 8px;
    padding: 0;
    text-transform: none;
}
.embm-beer .embm-beer--review .embm-beer--review-author > a {
    color: #C60;
}
.embm-beer .embm-beer--review .embm-beer--rating-stars {
    display: block;
    height: 20px;
    margin-bottom: 8px;
}
.embm-beer .embm-beer--review .embm-beer--review-comment {
    margin-bottom: 8px;
}
.embm-beer .embm-beer--review .embm-beer--review-meta {
    font-size: 0.8em;
}
.embm-beer .embm-beer--review .embm-beer--review-meta a {
    border-bottom: none;
    text-decoration: none;
}
.embm-beer .embm-beer--review .embm-beer--review-meta .embm-beer--review-date {
    padding-right: 10px;
}
.embm-beer .embm-beer--review .embm-beer--review-meta .embm-beer--review-date::after {
    content: '-';
    color: #999;
    display: inline-block;
    padding-left: 10px;
}
.embm-beer .embm-beer--review .embm-beer--review-meta .embm-beer--review-date a {
    color: #999;
}
.embm-beer .embm-beer--review .embm-beer--review-meta .embm-beer--review-source a {
    color: #C60;
}
.embm-beer--list .nav-below {
    text-align: right;
}
.embm-beer .wp-post-image {
    display: none;
}
.embm-beer--clear {
    clear: both;
}

